--- a/TwitterBackup.Web/Views/Home/Contact.cshtml
+++ b/TwitterBackup.Web/Views/Home/Contact.cshtml
@@ -1,19 +1,20 @@
-﻿<!------ Include the above in your HEAD tag ---------->
-<!-- Team -->
+﻿<!-- Team -->
 <section id="team" class="pb-5">
     <div class="container">
         <h5 class="section-title h1">OUR TEAM</h5>
         <div class="row">
             <!-- Team member -->
+            <div class="col-md-2"></div>
             <div class="col-xs-12 col-sm-6 col-md-4">
                 <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
                     <div class="mainflip">
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <p><img class=" img-fluid" src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png" alt="card image"></p>
+                                    <p><img class=" img-fluid" src="~/images/Markov-Edit.jpg" alt="card image"></p>
                                     <h4 class="card-title">Alexander Markov</h4>
                                     <p class="card-text">Lead developer</p>
+                                    <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -21,26 +22,19 @@
                             <div class="card">
                                 <div class="card-body text-center mt-4">
                                     <h4 class="card-title">Alexander Markov</h4>
-                                    <p class="card-text">This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.</p>
+                                    <p class="card-text">
+                                        I am curious young men, interested in software developnet.
+                                        I like sports of all kind and I'm a big football fan.
+                                    </p>
                                     <ul class="list-inline">
                                         <li class="list-inline-item">
-                                            <a class="social-icon text-xs-center" target="_blank" href="#">
-                                                <i class="fa fa-facebook"></i>
+                                            <a class="social-icon text-xs-center" target="_blank" href="https://github.com/AlxxlA">
+                                                <i class="fa fa-github"></i>
                                             </a>
                                         </li>
                                         <li class="list-inline-item">
-                                            <a class="social-icon text-xs-center" target="_blank" href="#">
-                                                <i class="fa fa-twitter"></i>
-                                            </a>
-                                        </li>
-                                        <li class="list-inline-item">
-                                            <a class="social-icon text-xs-center" target="_blank" href="#">
-                                                <i class="fa fa-skype"></i>
-                                            </a>
-                                        </li>
-                                        <li class="list-inline-item">
-                                            <a class="social-icon text-xs-center" target="_blank" href="#">
-                                                <i class="fa fa-google"></i>
+                                            <a class="social-icon text-xs-center" target="_blank" href="https://linkedin.com/in/alexander-markov-946b6715b">
+                                                <i class="fa fa-linkedin"></i>
                                             </a>
                                         </li>
                                     </ul>
@@ -58,9 +52,10 @@
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <p><img class=" img-fluid" src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_02.png" alt="card image"></p>
+                                    <p><img class=" img-fluid" src="https://media.licdn.com/dms/image/C5103AQEK2CN5kmyEow/profile-displayphoto-shrink_800_800/0?e=1531353600&v=beta&t=LQn70Mvq_TLazFgCfI2kHWjTnvWHBtpEEOL9lDfEdXI" alt="card image"></p>
                                     <h4 class="card-title">Angel Hristov</h4>
                                     <p class="card-text">Lead developer</p>
+                                    <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -77,23 +72,13 @@
                                     </p>
                                     <ul class="list-inline">
                                         <li class="list-inline-item">
-                                            <a class="social-icon text-xs-center" target="_blank" href="#">
-                                                <i class="fa fa-facebook"></i>
+                                            <a class="social-icon text-xs-center" target="_blank" href="https://github.com/aniget">
+                                                <i class="fa fa-github"></i>
                                             </a>
                                         </li>
                                         <li class="list-inline-item">
-                                            <a class="social-icon text-xs-center" target="_blank" href="#">
-                                                <i class="fa fa-twitter"></i>
-                                            </a>
-                                        </li>
-                                        <li class="list-inline-item">
-                                            <a class="social-icon text-xs-center" target="_blank" href="#">
-                                                <i class="fa fa-skype"></i>
-                                            </a>
-                                        </li>
-                                        <li class="list-inline-item">
-                                            <a class="social-icon text-xs-center" target="_blank" href="#">
-                                                <i class="fa fa-google"></i>
+                                            <a class="social-icon text-xs-center" target="_blank" href="https://www.linkedin.com/in/angel-hristov-fcca-cia-8129481/">
+                                                <i class="fa fa-linkedin"></i>
                                             </a>
                                         </li>
                                     </ul>
