--- a/TwitterBackup.Web/Views/Tweeters/Profile.cshtml
+++ b/TwitterBackup.Web/Views/Tweeters/Profile.cshtml
@@ -90,7 +90,7 @@
             </div>
         </div>
         <!-- /.col-md-12 -->
-        <div class="col-md-4 col-sm-12 pull-left">
+        <div class="col-md-3 col-sm-12 pull-left">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <p class="page-subtitle small">@Model.Tweeter.Description</p>
@@ -113,7 +113,7 @@
                 <div class="clearfix"></div>
             </div>
         </div>
-        <div class="col-md-8 col-sm-12 pull-right posttimeline">
+        <div class="col-md-8 col-sm-12 pull-left posttimeline">
             @{
                 <ul class="nav nav-tabs" id="myTab">
                     <li class="active"><a tweeter-id="@Model.Tweeter.TweeterId" href="#saved">Saved Tweets</a></li>
