--- a/TwitterBackup.Web/Views/Home/Index.cshtml
+++ b/TwitterBackup.Web/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="brand-heading">Twitter<br /> backup</h1>
+                    <h1 class="brand-heading" style="  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;">Twitter<br /> backup</h1>
                     <p class="intro-text">
                         Enjoy your favourite tweets.
                     </p>
