--- a/TwitterBackup.Web/Views/Tweets/_Tweet.cshtml
+++ b/TwitterBackup.Web/Views/Tweets/_Tweet.cshtml
@@ -47,18 +47,18 @@
         <div class="col-md-12 border-top">
             @{
                 var hideSave = Model.IsLikedFromUser ? "hide" : "";
-                var hideNode = Model.IsLikedFromUser ? "" : "hide";
+                var hideNote = Model.IsLikedFromUser ? "" : "hide";
 
                 <div class="save-tweet">
-                    <form class="save-tweet-form @hideSave" asp-controller="Tweets" asp-action="Add" method="post">
+                    <form class="save-tweet-form @hideSave" asp-controller="Tweets" asp-action="Add" method="post" tweet-id="@Model.TweetId">
                         <div style="display: none">
                             <input name="tweetId" value="@Model.Tweeter.TweeterId" type="text" class="form-control" />
                         </div>
-                        <button type="submit" class="btn-save-tweet btn btn-success pull-left"> Save</button>
+                        <button type="submit" class="btn-save-tweet btn btn-primary pull-left"> Save</button>
                     </form>
                 </div>
                 <div class="status-uploadm">
-                    <form class="tweet-note-form @hideNode" asp-controller="Tweets" asp-action="Edit" method="post" tweet-id="@Model.TweetId">
+                    <form class="tweet-note-form @hideNote" id="edit-form-note-@Model.TweetId" asp-controller="Tweets" asp-action="Edit" method="post" tweet-id="@Model.TweetId">
                         <div class="comment-field hidden">
                             <label>AddNote</label>
                             <textarea asp-for="TweetComments" class="comment-box form-control" id="comment-box-@Model.TweetId" placeholder="Add note here."></textarea>
@@ -71,6 +71,10 @@
                         </div>
                         <button type="submit" class="btn-comment btn btn-success pull-right">Add Note</button>
                     </form>
+                </div>
+                <div class="retweet-tweet @hideNote" id="retweet-@Model.TweetId">
+                    <script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script>
+                    <a class="btn btn-primary btn-retweet-tweet" href="https://twitter.com/intent/retweet?tweet_id=@Model.TweetId">Retweet</a>
                 </div>
             }
         </div>
