--- a/TwitterBackup.Web/wwwroot/css/contact.css
+++ b/TwitterBackup.Web/wwwroot/css/contact.css
@@ -8,9 +8,11 @@ section {
 
     section .section-title {
         text-align: center;
-        color: #007b5e;
+        color: white;
         margin-bottom: 50px;
         text-transform: uppercase;
+        font-size: 60px;
+        text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     }
 
 #team .card {
