--- a/TwitterBackup.Web/Views/Tweeters/Profile.cshtml
+++ b/TwitterBackup.Web/Views/Tweeters/Profile.cshtml
@@ -156,7 +156,8 @@
 </div>
 
 @section Scripts {
-    <script src="~/js/add-tweet-note.js"></script>
     <script src="~/js/btn-follow-following.js"></script>
     <script src="~/js/btn-follow-hover.js"></script>
+    <script src="~/js/add-tweet-note.js"></script>
+    <script src="~/js/remove-tweet.js"></script>
 }
