--- a/TwitterBackup.Web/Views/Tweets/AllTweets.cshtml
+++ b/TwitterBackup.Web/Views/Tweets/AllTweets.cshtml
@@ -16,8 +16,8 @@
 }
 
 
-@section Scripts
-    {
-    <script src="~/js/save-twet.js"></script>
+@section Scripts {
     <script src="~/js/add-tweet-note.js"></script>
+    <script src="~/js/save-twet.js"></script>
+    <script src="~/js/remove-tweet.js"></script>
 }
