admin view tweeter profil from user

--- a/TwitterBackup.Web/Views/Tweeters/Profile.cshtml
+++ b/TwitterBackup.Web/Views/Tweeters/Profile.cshtml
@@ -116,8 +116,8 @@
         <div class="col-md-8 col-sm-12 pull-left posttimeline">
             @{
                 <ul class="nav nav-tabs" id="myTab">
-                    <li class="active"><a tweeter-id="@Model.Tweeter.TweeterId" href="#saved">Saved Tweets</a></li>
-                    <li><a tweeter-id="@Model.Tweeter.TweeterId" href="#new">New Tweets</a></li>
+                    <li class="active"><a tweeter-id="@Model.Tweeter.TweeterId" user-name="@Model.Tweeter.UserName" href="#saved">Saved Tweets</a></li>
+                    <li><a tweeter-id="@Model.Tweeter.TweeterId" user-name="@Model.Tweeter.UserName" href="#new">New Tweets</a></li>
                 </ul>
 
                 <div class="tab-content">
