--- a/TwitterBackup.Web/Views/Account/Login.cshtml
+++ b/TwitterBackup.Web/Views/Account/Login.cshtml
@@ -13,7 +13,7 @@
     <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
         <div class="panel panel-info">
             <div class="panel-heading">
-                <div class="panel-title">Sign In</div>
+                <div class="panel-title">Log In</div>
             </div>
             <div style="padding-top:30px" class="panel-body">
                 <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
@@ -23,7 +23,7 @@
                     <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="input-group" style="margin-bottom: 25px">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                        <input asp-for="Email" id="login-password" type="text" class="form-control" name="email" placeholder="username or email" />
+                        <input asp-for="Email" id="login-email" type="text" class="form-control" name="email" placeholder="username or email" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
 
