--- a/TwitterBackup.Web/Views/Home/About.cshtml
+++ b/TwitterBackup.Web/Views/Home/About.cshtml
@@ -1,7 +1,34 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<div class="row" style="background-color: rgba(255, 255, 255, 0.5); margin-top: 50px;">
+    <div class="col-md-5">
+        <h1 style="text-align: center">Why Twitter backup?</h1>
+        <h3>
+            There are many options to store and work with your tweets and almost none to work with the tweets of others.
+            What if we like something that we've read on Twitter and want to keep on a safe place, easy to find when we need it?
+            This could be an interesting article, exciting news for our favorite artist or just a motivational thought of somebody
+        </h3>
+        <h2>Twitter Backup does exactly that, ... and does it well!</h2>
+        <h3>With twitter backup you can do it all:</h3>
+        <ul style="font-size: 20px">
+            <li>1. store a tweet you liked while you read it</li>
+            <li>2. Add comment to that tweet and find it easily afterwards</li>
+            <li>3. Have all your Favorite Tweeters saved on one place</li>
+            <li>4. Check for new tweets on your favorites</li>
+            <li>5. Coming is our functionality to automatically save new tweets</li>
+        </ul>
+        <h3>All that provided to you in a very intuitive design and easy to use.</h3>
+    </div>
+    <div class="col-md-5 pull-right">
+        <h1 style="text-align: center">FAQ</h1>
+        <h3>Q: Who did this?!?!?</h3>
+        <h3>A: Not me.</h3>
+    </div>
+    <div class="col-md-7">
+        <iframe width="640" height="360" src="https://www.youtube.com/embed/dQw4w9WgXcQ?ecver=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+</div>
+
+
