--- a/TwitterBackup.Web/Views/Shared/_Layout.cshtml
+++ b/TwitterBackup.Web/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
 <footer>
     <hr />
     <div class="container text-center">
-        <p>Copyright &copy; Your Website 2016</p>
+        <h4>Copyright &copy; Twitter Backup 2018. Telerik Academy Alpha Project</h4>
     </div>
 </footer>
 </html>
