Include css files in release.

--- a/TwitterBackup.Web/Views/Shared/_Layout.cshtml
+++ b/TwitterBackup.Web/Views/Shared/_Layout.cshtml
@@ -23,6 +23,12 @@
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="~/css/tweeter.css" />
+        <link rel="stylesheet" href="~/css/searchBar.css" />
+        <link rel="stylesheet" href="~/css/tweeterProfilePage.css">
+        <link rel="stylesheet" href="~/css/grayscale.min.css" />
+        <link rel="stylesheet" href="~/css/contact.css" />
+        <link rel="stylesheet" href="~/css/site.css" />
     </environment>
 
 </head>
