Edit text in About and Contact views

--- a/TwitterBackup.Web/Views/Home/About.cshtml
+++ b/TwitterBackup.Web/Views/Home/About.cshtml
@@ -13,13 +13,13 @@
         <h2>Twitter Backup does exactly that, ... and does it well!</h2>
         <h3>With twitter backup you can do it all:</h3>
         <ul style="font-size: 20px">
-            <li>1. store a tweet you liked while you read it</li>
-            <li>2. Add comment to that tweet and find it easily afterwards</li>
-            <li>3. Have all your Favorite Tweeters saved on one place</li>
-            <li>4. Check for new tweets on your favorites</li>
-            <li>5. Coming is our functionality to automatically save new tweets</li>
+            <li> Store a tweet you liked while you read it</li>
+            <li> Add comment to that tweet and find it easily afterwards</li>
+            <li> Have all your Favorite Tweeters saved on one place</li>
+            <li> Check for new tweets from your favorite tweeters</li>
+            <li> Automatically save new tweets is coming soon ...</li>
         </ul>
-        <h3>All that provided to you in a very intuitive design and easy to use.</h3>
+        <h3>All that is provided to you in a very intuitive design and easy to use.</h3>
     </div>
     <div class="col-md-5 pull-right">
         <h1 style="text-align: center">FAQ</h1>
