--- a/TwitterBackup.Web/Views/Home/Contact.cshtml
+++ b/TwitterBackup.Web/Views/Home/Contact.cshtml
@@ -23,7 +23,7 @@
                                 <div class="card-body text-center mt-4">
                                     <h4 class="card-title">Alexander Markov</h4>
                                     <p class="card-text">
-                                        I am curious young men, interested in software developnet.
+                                        I am curious young man, interested in software developnet.
                                         I like sports of all kind and I'm a big football fan.
                                     </p>
                                     <ul class="list-inline">
@@ -65,10 +65,11 @@
                                     <h4 class="card-title">Angel Hristov</h4>
                                     <p class="card-text">
                                         Passionate about helping people through software
-                                        development
+                                        development.
+                                        <br />
                                         ASP.NET Full Stack developer with indepth knowledge in MSSQL/ Oracle and VBA
-                                        who enjoys working in a team solving complex business problems and making customers happy.
-                                        Interested in Machine Learning.
+                                        who enjoys working in a team solving complex business problems.
+                                        Interested in Machine Learning and AI.
                                     </p>
                                     <ul class="list-inline">
                                         <li class="list-inline-item">
